# OneBitSparseMul

./: .gitignore  CMakeLists.txt  CUDA.cmake  README.md  makefile  setup.py
csrc/: kernel.cu  kernel.h  kernel_lib.cu  onebit_sparse_multistage.h  threadblock.h  warp.h
include/: onebit_sparse_tensor.h
onebit_sparse_mul/: __init__.py  _semi_structured_conversions.py  torch_kernel_cuda.cpp
script/: cuda_run_test.sh  kernel_test.gdb
tests/: kernel_test.cu  libso_test.cu
tests/cutlass_future/: alignedarray_test.cu  makefile
tests/python/: test_model_replace.py  test_mul.py  test_sparse.py
tests/unit/: CMakeLists.txt  epilogue_test.cu  makefile  test_unit.cpp  threadblock_test.cu  threadblock_test.h  warp_test.cu  warp_test.h
utils/: checkout_device.cu  makefile
